[package]
name = "snownet-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
boringtun = { workspace = true }
futures = "0.3"
hex = "0.4"
ip-packet = { workspace = true }
pnet_packet = { version = "0.34" }
rand = "0.8"
redis = { version = "0.25.4", default-features = false, features = ["tokio-comp"] }
redis-macros = "0.3.0"
secrecy = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde-hex = "0.1.0"
serde_json = "1"
snownet = { workspace = true }
system-info = { version = "0.1.2", features = ["std"] }
tokio = { workspace = true, features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[lints]
workspace = true
