[package]
name = "socket-factory"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }

[dependencies]
firezone-logging = { workspace = true }
quinn-udp = { workspace = true }
socket2 = { workspace = true }
tokio = { workspace = true, features = ["net"] }
tracing = { workspace = true }
