[package]
name = "socket-factory"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }

[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
firezone-logging = { workspace = true }
ip-packet = { workspace = true }
quinn-udp = { workspace = true }
socket2 = { workspace = true }
tokio = { workspace = true, features = ["net"] }
tracing = { workspace = true }
