[package]
name = "tun"
version = "0.1.0"
edition = "2021"
license = { workspace = true }
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(target_family = "unix")'.dependencies]
libc = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
