[package]
name = "tun"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ip-packet = { workspace = true }
anyhow = { workspace = true }

[target.'cfg(target_family = "unix")'.dependencies]
libc = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
flume = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
